<resources>
    <string name="app_name">ATongs-MD</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_article">Article</string>
    <string name="your_web_client_id">1089859227835-g8dgopkckqbb7oapdkhn0sv3ukucg5a6.apps.googleusercontent.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="greet">Hallo apa kabar!</string>
    <string name="greet_name">ATongs!</string>
    <string name="try_now">Scan Waste</string>
    <string name="home_desc">Scan untuk mendapatkan hasil klasifikasi sampah. Ayo recycle sampah menjadi produk kreatif</string>
    <string name="home_msg">Pastikan untuk mengambil gambar di bawah sinar matahari atau memindai di latar belakang polos,sehingga gambar yang dihasilkan terlihat lebih baik dan benar</string>
    <string name="login_with">Login with :</string>
    <string name="article_title">Jaga Kebersihan</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nibh mauris cursus mattis molestie. Pulvinar pellentesque habitant morbi tristique senectus et netus et. Justo nec ultrices dui sapien eget mi proin sed. Ac tincidunt vitae semper quis lectus nulla at. Lacus laoreet non curabitur gravida arcu ac tortor. Amet aliquam id diam maecenas ultricies mi eget. Interdum posuere lorem ipsum dolor sit amet consectetur adipiscing. At urna condimentum mattis pellentesque id. Donec ultrices tincidunt arcu non sodales neque sodales ut etiam. Dui sapien eget mi proin sed libero enim sed faucibus. Adipiscing at in tellus integer feugiat scelerisque varius morbi. Cum sociis natoque penatibus et magnis dis parturient montes. Neque aliquam vestibulum morbi blandit cursus.</string>
    <string name="date_dummy">06/06/2024</string>
    <string name="waste">Botol Plastik</string>
    <string name="scan_result">Detail result scan</string>
    <string name="under_construction">Sedang Perbaikan</string>
    <string name="sample_name">Naufal</string>
    <string name="source_title">Tittle</string>
    <string name="sample_source">"Source Link "</string>
    <string name="upload">Upload</string>
    <string name="label">Botol Plastik</string>
    <string name="accuracy">Akurasi : </string>
    <string name="acc_percent">80%</string>
    <string name="description">Massage</string>
    <string name="desc_massage">Classified as: trash</string>
    <string name="explanation">Explanation</string>
    <string name="message_explanation">Limbah logam merupakan salah satu jenis limbah yang terbuat dari bahan logam. Hal ini dapat berasal dari berbagai sumber, seperti produksi industri, manufaktur, dan penggunaan konsumen. Limbah logam dapat menjadi masalah karena sulit didaur ulang, dan juga dapat mencemari lingkungan jika tidak dibuang dengan benar. Ada beberapa cara untuk mengurangi limbah logam, seperti menggunakan kembali produk logam, mendaur ulang bahan logam, dan memilih produk yang berbahan logam daur ulang.</string>
    <string name="suggestion">Suggestion</string>
    <string name="message_suggestion">* Pisahkan sampah logam dari sampah jenis lainnya. Hal ini dapat dilakukan dengan menempatkan benda-benda logam di tempat sampah atau wadah daur ulang yang telah ditentukan.\\n* Bersihkan benda logam sebelum mendaur ulangnya. Ini akan membantu mencegah kontaminasi bahan daur ulang lainnya.\\n* Ratakan benda logam untuk mengurangi volumenya. Ini akan membuatnya lebih mudah untuk diangkut dan diproses.\\n* Tempatkan benda logam di tempat sampah atau wadah daur ulang. Sebagian besar masyarakat telah menyediakan tempat sampah atau wadah daur ulang untuk limbah logam.</string>
</resources>